--- a/rest-server/pom.xml
+++ b/rest-server/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>konux-rest-service</artifactId>
+    <artifactId>test-event-rest-service</artifactId>
     <version>0.1.0</version>
 
     <parent>
@@ -31,6 +31,11 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
             <version>3.5.1</version>
         </dependency>
     </dependencies>
